<resources>
    <string name="app_name">Recipick</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="forgot_title">Forgot your Password?</string>
    <string name="forgot_password_message">No worries, we\'ll help you get access to your account again. Just enter the email that was used to set up your profile and hit reset password, After a few minutes you\'ll be sent an email containing a link to reset your password.</string>
    <string name="forgot_email_field">Enter your email address</string>
    <string name="forgot_go_back">Go back to login page</string>
    <string name="forgot_btnForgotPass">Reset Password</string>
    <string name="Email_Regex">^[_A-Za-z0-9-+]+(\\.[_A-Za-z0-9-]+)*@[A-Za-z0-9-]+(\\.[A-Za-z0-9]+)*(\\.[A-Za-z]{2,})$</string>
    <string name="slogan">Make it your own</string>
    <string name="email_field">Enter your email address</string>
    <string name="password_field">Enter your password</string>
    <string name="log_in">LOG IN</string>
    <string name="forgot_password_txtbtn">Forgot Password?</string>
    <string name="or">OR </string>
    <string name="no_account_txtbtn">Don\'t have an account?</string>
    <string name="btn_register">Register</string>
    <string name="register_slogan">Get access to thousands of recipes! \n Join us today</string>
    <string name="comfirm_password_field">Confirm your password</string>
    <string name="confirm_email_field">Confirm your email address</string>
    <string name="already_have_an_account_txtbtn">Already have an account?</string>
    <string name="display_name_field">Enter Your display name</string>
    <string name="go_back_to_login_page">Go back to login page</string>
    <string name="app_logo_splash">App Logo</string>
    <string name="RecipeTab">Recipe</string>
    <string name="DiscoverTab">Discover</string>
    <string name="FavouritesTab">Favourites</string>
    <string name="Trolley">Trolley</string>
    <string name="Nearby">Nearby</string>
    <string name="SignOut">Sign out</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_shopping_list">Shopping List</string>
    <string name="FindSupermarkets">Find Supermarkets</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_recipe_details">RecipeDetails</string>
    <string name="tab_text_1">Overview</string>
    <string name="tab_text_2">Preparation</string>
    <string name="tab_text_3">Photos</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_my_recipe">MyRecipeActivity</string>
    <string name="my_recipes">My Recipes</string>
</resources>
