<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotActivity">

    <ImageButton
        android:contentDescription="@string/forgot_go_back"
        android:id="@+id/backToMain"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorDarkerGrey"
        android:background="@drawable/ic_arrow_back" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="60dp"
        android:fontFamily="@font/roboto"
        android:text="@string/forgot_title"
        android:textColor="@color/TitleColour"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_alignStart="@+id/title"
        android:layout_alignEnd="@+id/title"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:text = "@string/forgot_password_message"/>


    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@+id/txtMessage"
        android:layout_marginTop="15dp"
        android:layout_alignStart="@+id/title"
        android:layout_alignEnd="@+id/title"
        android:ems="10"
        android:hint="@string/forgot_email_field"
        android:inputType="textWebEmailAddress" />

    <Button
        android:id="@+id/btnForgotPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtEmail"
        android:layout_alignStart="@+id/title"
        android:layout_alignEnd="@+id/title"
        android:background="@color/colorAccent"
        android:layout_marginTop="15dp"
        android:text="@string/forgot_btnForgotPass"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/txtEmessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnForgotPass"
        android:layout_alignStart="@+id/title"
        android:layout_alignEnd="@+id/title"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:textSize="15sp"
        android:text = ""/>


</RelativeLayout>