<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".Activities.RecipeDetails">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
                app:contentScrim="@color/colorPrimary"
                app:title="Recipe">

                <android.support.v4.view.ViewPager
                    android:id="@+id/recipe_view_pager"
                    android:layout_width="match_parent"
                    android:layout_height="250dp" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/recipe_toolbar"
                    android:layout_width="match_parent"
                    app:layout_collapseMode="pin"
                    android:layout_height="?attr/actionBarSize"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"/>


            </android.support.design.widget.CollapsingToolbarLayout>

            <!--
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/colorPrimary"
                android:layout_weight="1">

                <android.support.v4.view.ViewPager
                    android:id="@+id/recipe_view_pager"
                    android:layout_width="match_parent"
                    android:layout_height="250dp" />

                <RelativeLayout
                    android:id="@+id/bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorTransparentBar"
                    android:orientation="horizontal"
                    android:padding="10dp">
                    <ImageButton
                        android:id="@+id/backToMain"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        app:backgroundTint="@color/white"
                        android:background="@drawable/ic_arrow_back"
                        android:contentDescription="@string/go_back_to_login_page" />

                    <TextView
                        android:id="@+id/txtTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:maxLines="1"
                        android:maxWidth="100dp"
                        android:textColor="@color/colorAccentDark"
                        android:textSize="15sp" />

                </RelativeLayout>

            </RelativeLayout> -->

            <android.support.design.widget.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabMaxWidth="0dp"
                app:tabGravity="fill"
                app:tabMode="fixed"
                app:tabTextColor="#FFFFFF"
                app:tabSelectedTextColor="#FFFFFF"
                app:tabIndicatorColor="#FFFFFF">

                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_1" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_2" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_3" />

            </android.support.design.widget.TabLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <!--
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnShop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/btnFav"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/fab_margin"
            android:src="@android:drawable/star_on"/>

        <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/star_off" /> -->

</android.support.design.widget.CoordinatorLayout>
